k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sport-activity-synchronizer-backend
  namespace: "sport-activity"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sport-activity-synchronizer-backend
    spec:
      containers:
        - name: sport-activity-synchronizer-backend
          image: apociejowski/sport-activity-synchronizer-backend
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
