k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sport-activity-mongodb
  namespace: "sport-activity"
spec:
  selector:
    matchLabels:
      app: sport-activity-mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: sport-activity-mongodb
    spec:
      containers:
        - name: sport-activity-mongodb
          image: mongo:4.2.8
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: sport-activity-mongodb
      volumes:
        - name: sport-activity-mongodb
          persistentVolumeClaim:
            claimName: sport-activity-mongodb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sport-activity-mongodb
  namespace: "sport-activity"
  labels:
    app: sport-activity-mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
  selector:
    app: sport-activity-mongodb
