k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sport-activity-synchronizer-backend
  namespace: "sport-activity"
  labels:
    app: sport-activity-synchronizer-backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: sport-activity-synchronizer-backend
